force-app/main/default/objects/RuleResult__c/RuleResult__c.object-meta.xml
<CustomObject>
    <label>Rule Result</label>
    <nameField>
        <label>Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rule Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>