force-app/main/default/objects/RuleResult__c/fields/MetadataFile__c.field-meta.xml
<CustomField>
    <fullName>MetadataFile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MetadataFile</label>
    <referenceTo>MetadataFile__c</referenceTo>
    <relationshipName>RuleResults</relationshipName>
    <type>Lookup</type>
</CustomField>