force-app/main/default/objects/RuleResult__c/fields/ReportDate__c.field-meta.xml
<CustomField>
    <fullName>ReportDate__c</fullName>
    <formula>RuleSetResult__r.ReportDate__c</formula>
    <label>ReportDate</label>
    <type>Date</type>
</CustomField>