force-app/main/default/objects/RuleResult__c/fields/RuleSetResult__c.field-meta.xml
<CustomField>
    <fullName>RuleSetResult__c</fullName>
    <label>RuleSetResult</label>
    <referenceTo>RuleSetResult__c</referenceTo>
    <relationshipName>RuleResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>