force-app/main/default/objects/RuleResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>Priority__c</columns>
    <columns>MetadataFile__c</columns>
    <columns>Line__c</columns>
    <columns>Description__c</columns>
    <columns>RuleSetResult__c</columns>
    <columns>Problem__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>